# dinghy-ping

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Pipfile  README.md  SECURITY.md  Tiltfile  api.py  boot.sh  config.py  data.py  dinghy_dns.py  dinghyping.py  index.yaml  install-grpcurl.sh  pyproject.toml
.github/workflows/: codeql-analysis.yml  helm-lint-test.yml  helm-release.yml  license_report.yml  linter.yml  publish-docker-image.yml  publish-latest-docker-image.yml
app/: __init__.py
app/errors/: __init__.py  handlers.py
app/main/: __init__.py  forms.py  routes.py  ws.py
app/models/: dinghy_dns.py
app/templates/: base.html  dns_info.html  index.html  ping_response_tcp_conn.html  pod_describe_output.html  pod_logs_input.html  pod_logs_output_streaming.html
app/utils/: git_manager.py  grpc_manager.py  k8s.py  network.py
charts/dinghy-ping/: Chart.yaml  values.yaml
charts/dinghy-ping/templates/: NOTES.txt  deployment.yaml  ingress.yaml  istio-virtual-service.yaml  nginx-ingress.yaml  rbac.yaml  redis-statefulset.yaml  service.yaml
dinghy_ping/: app.py
dinghy_ping/controllers/: DnsController.py  HttpController.py  LogController.py  PingController.py  TcpController.py
dinghy_ping/models/: data.py  dinghy_dns.py
dinghy_ping/services/: DnsService.py  LogService.py  PingService.py  RequestService.py  api.py  forms.py
dinghy_ping/views/templates/: base.html  deployments_tabbed.html  (+12 more)
hack/: list-namespaces.py  stream-logs.py
helm/dinghy-ping/: Chart.yaml  values.yaml
local_development_scripts/: local.yaml  local_image_test.sh
templates/: base.html  dinghy_index.html  dinghy_pod_logs.html  dns_info.html  index.html  list_pods.html  ping_input.html  ping_response.html  ping_response_tcp_conn.html  pod_logs.html  pod_logs_input.html  pod_logs_output.html  stream_logs.html
terraform/: config.tf  dashboard.tf  rbac.tf  variables.tf
tests/: api_test.py  app_test.py  multiple_domains.json  ping_test.py
(+7 files in other folders)
