[tool.poetry]
name = "dinghy-ping"
version = "1.0.0"
description = "read-only k8s interface and debugging platform"
authors = ["Zane Williamson <zane.w@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.2.0"
dnspython = "^2.2.1"
datadog = "^0.44.0"
ddtrace = "^0.60.0"
gunicorn = "^20.1.0"
Flask = {extras = ["async"], version = "^2.0.3"}
kubernetes = "^23.3.0"
flask-sock = "^0.5.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.0"
pytest = "^7.1.1"
ipython = "^8.1.1"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
